@@ -13,7 +13,7 @@ public class SecurityMessagesConfig {
 	@Bean
 	public MessageSource messageSource() {
 
-		Locale.setDefault(new Locale("pl", "PL"));
+		Locale.setDefault(Locale.of("pl", "PL"));
 		ReloadableResourceBundleMessageSource messageSource = new ReloadableResourceBundleMessageSource();
 		messageSource.addBasenames("classpath:org/springframework/security/messages");
 		return messageSource;
